<resources>
    <string name="app_name">Assignement 1</string>
    <string name="random_text">100</string>
    <string name="randomize">Randomize!</string>

    <string name="action_settings">Settings</string>
    <string name="length">Length (cm): </string>
    <string name="weight">Weight (kg): </string>
    <string name="compute">Compute</string>
    <string name="reset">Reset</string>
    <string name="BMI_index">BMI_index</string>
    <string name="alert_msg">Please try to read the instructions. The input must be a double!</string>
    <string name="alert_title">Input Format Error</string>
    <string name="settings">Settings</string>
</resources>
